# tidytcells

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  README.rst  build.sh  pyproject.toml  setup.py  tox.ini
data/: homosapiens_tcr.fasta  homosapiens_tcr_aa_sequences.fasta  homosapiens_tr.fasta  homosapiens_traj_imgt.csv  homosapiens_trav_imgt.csv  homosapiens_trbj_imgt.csv  homosapiens_trbv_imgt.csv  musmusculus_mh.ods  musmusculus_mhc_imgt.ods  musmusculus_tcr.fasta  musmusculus_tr.fasta  musmusculus_traj_imgt.csv  musmusculus_trav_imgt.csv  musmusculus_trbj_imgt.csv  musmusculus_trbv_imgt.csv
docs/: api.rst  citing.rst  conf.py  contribute.rst  index.rst  installation.rst  usage.rst
notebooks/: catalogue_homosapiens_mhc_gene_data.ipynb  catalogue_homosapiens_tcr_gene_data.ipynb  catalogue_human_tcr_gene_data.ipynb  catalogue_musmusculus_mhc_gene_data.ipynb  catalogue_musmusculus_tcr_gene_data.ipynb  catalouge_musmusculus_mhc_gene_data.ipynb  homosapiens_catalogue_mhc.ipynb  homosapiens_catalogue_tcr.ipynb  musmusculus_catalogue_mhc.ipynb  musmusculus_catalogue_tcr.ipynb  test_iedb.ipynb  test_on_vdjdb.ipynb  test_vdjdb.ipynb
notes/: key_for_valid_values.md  nomenclature_standardisation.md  valid_gene_symbols_key.md
scripts/: homosapiens_catalogue_ig.py  homosapiens_catalogue_mh.py  homosapiens_catalogue_mhc.py  homosapiens_catalogue_tcr.py  homosapiens_catalogue_tr.py  musmusculus_catalogue_ig.py  musmusculus_catalogue_mh.py  musmusculus_catalogue_mhc.py  musmusculus_catalogue_tcr.py  musmusculus_catalogue_tr.py  script_utility.py
(+124 files in other folders)
